--- a/app/src/main/res/menu/menu_card.xml
+++ b/app/src/main/res/menu/menu_card.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.devgamarra.bingo.CardActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_clean_table"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_clean_table"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_add_card"
+        android:orderInCategory="100"
+        android:title="@string/action_add_card"
         app:showAsAction="never" />
 </menu>
