--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#1A237E</color>
     <color name="colorAccent">#FFEB3B</color>
     <color name="colorDark">#444444</color>
+    <color name="colorLight">#E8EAF6</color>
+    <color name="colorPrimaryGray">#C5CAE9</color>
 </resources>
