--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorDark">#444444</color>
     <color name="colorLight">#E8EAF6</color>
     <color name="colorPrimaryGray">#C5CAE9</color>
+    <color name="colorGreen">#AED581</color>
 </resources>
