--- a/app/src/main/res/menu/menu_card.xml
+++ b/app/src/main/res/menu/menu_card.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.devgamarra.bingo.CardActivity">
+    tools:context="com.devgamarra.bingo8.CardActivity">
     <item
         android:id="@+id/action_clean_table"
         android:orderInCategory="100"
