--- a/app/src/main/res/menu/menu_bingo.xml
+++ b/app/src/main/res/menu/menu_bingo.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.devgamarra.bingo8.BingoActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_auto_play"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_auto_play"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_stop_play"
+        android:orderInCategory="100"
+        android:title="@string/action_stop_play"
         app:showAsAction="never" />
 </menu>
